--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<ul>
 			<a href="#"><li>Home</li></a>
 			<a href="#"><li>About</li></a>
-			<a href="#"><li>Call Me, Beep Me</li></a>
+			<a href="#"><li>Contact</li></a>
 			<a href="#"><li>Blog</li></a>
 			<a href="#"><li>TBA</li></a>
 		</ul>
