Changed background image and navbar

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 	<!-- NAVBAR -->
 	<div class="nav">
 		<ul>
-			<a href="#"><li>Home</li></a>
-			<a href="#"><li>About</li></a>
-			<a href="#"><li>Contact</li></a>
-			<a href="#"><li>Blog</li></a>
-			<a href="#"><li>TBA</li></a>
+			<a class="navbar-link" href="#"><li>Home</li></a>
+			<a class="navbar-link" href="#"><li>About</li></a>
+			<a class="navbar-link" href="#"><li>Contact</li></a>
+			<a class="navbar-link" href="#"><li>Blog</li></a>
+			<a class="navbar-link" href="#"><li>TBA</li></a>
 		</ul>
 	</div>
 	
