Added actual content
not sure how the quotation marks are being treated that way?

--- a/index.html
+++ b/index.html
@@ -25,74 +25,34 @@
 
 	<!-- SECTION CONTENT -->
 	<div class="section content">
-		<p>Ooohh yeahh yeah
-
-I'm your basic average girl
-And I'm here to save the world
-You can't stop me 
-Cause I'm Kim Pos-si-ble
-There is nothin I can't do
-When danger calls
-Just know that I am on my way (know that i am on my way)
-
-It doesn't matter where or when there's trouble
-If ya just call my name
-Kim Possible
-
-[Chorus]
-Call me, beep me if ya wanna reach me
-When ya wanna page me it's okay
-I just can't wait until I hear my cell phone ring
-Doesn't matter if it's day or night
-Everything's gonna be alright
-Whenever you need me baby
-Call me, beep me if ya wanna reach me
-
-(Kim here, so what's the sitch?)
-
-Message clear I am hear let me reassure you
-I never going to leave you alone 
-(I am, I am on my way)
-You can always count on me
-When it gets dark I'll help you see
-I will help you find your way (help you find your way)
-
-It doesn't matter when there's trouble
-If ya just call my name
-
-[Chorus]
-
-(Call me
-Beep me
-If ya wanna reach me
-If ya wanna beep me
-It's okay)
-
-Doesn't matter where
-Doesn't matter when
-I will be there for ya til the very end
-Danger or trouble
-I'm there on the double
-You know that you always can call
-Kim Possible
-
-Yeaahh yeaah
-
-Call me, beep me if ya wanna reach me
-When ya wanna page me it's okay
-I just can't wait until I hear my cell phone ring
-Doesn't matter if it's day or night
-Everything is gonna be alright
-Whenever ya need me, whenever you need me baby
-Call me, beep me if ya wanna reach me
-When ya wanna page me it's okay
-I just can't wait until I hear my cell phone ring
-Doesn't matter if it's day or night
-Everything's gonna be alright
-Whenever ya need me baby,
-Call me, beep me if ya wanna reach me
-Yeah Yeah Yeah
-</p>
+		<p>
+			Freshman year of biology, I learned that it takes seven years to replace every cell in our human bodies, for our bodies to be completely new again. It takes six minutes for brain cells to die from lack of oxygen. It takes twenty-one years to drink legally, eighteen to enlist in the military, eighteen to vote, sixteen to have a license, eighty years to live, if lucky. But how long does it take to forget how a name tastes in the air? How long does it take to forget what it feels like to listen to a certain person’s voice, to be in a certain person’s presence? How long until memory erases their distinct smell from the world? How long do memories last? 
+			As the street artist Banksy said, "They say you die twice. One time when you stop breathing and a second time, a bit later on, when somebody says your name for the last time."" 
+		</p>
+		<p>
+			We may forget names, but that's what cardinals, stars, flowers and graveyards are for.
+		</p>
+		<p>
+			Mimi, my grandmother, and I soaked in the warmth of the afternoon sun, stationed on a park bench, scanned the sky for the birds that fly by, and spotted a cardinal perched on a tree one day. The year and the exact place escaped my mind years ago but her words have been etched into my memory. She spoke with wisdom, "I was once told that whenever a cardinal flies by it is someone who loves you checking up on you. They are letting you know that you are never alone. Although you may not see them anymore, the cardinals remind us that the ones we love are never truly gone." Those words echo in my mind whenever those cranberry birds are near. Lately, I have been seeing cardinals everywhere; I would like to think it is Mimi saying hello. 
+		</p>
+		<p>
+			In my sociology course back in high school, Mr. O’Keefe recited the poem entitled “How Do You Live Your Dash”. This poem still resonates with me, even to this day I have the poem taped to my wall next to my mirror. The poem talks about how on a gravestone, there are two dates neatly carved, a beginning and an end, with a deep dash between those years. The dash is your life. “So when your eulogy’s being read / with your life’s actions to rehash... would you be proud of the things they say / about how you spent your dash” 
+		</p>
+		<p>
+			I had never thought about how temporary life was. Graveyards were never connected to death in my mind, I could not understand it. It was only until when I was eight. I was sitting in front of an old clunky television set in my living room, swallowed in the sea of toys spilled on the carpet, the chaos of cartoons set the mood while I played with my dolls, Polly Pockets to be specific. My childhood joy was shattered when my mother runs into the room sobbing, wailing, collapsing on the leather couch. All I could do was watch, I had never seen her cry except when I received First Holy Communion a few months ago, those tears were quite dew drops resting on her cheeks. These tears were different, they felt broken, cold, empty. I gingerly placed the dolls on the floor so as to not hurt them and sat next to my mother, she wrapped her arms around me. She whispered two words and that was all I needed to know, “He’s dead.” 
+		</p>
+		<p>
+			On Mother’s Day, years later, I was in the backseat of the car, replaying the moment I found out Mimi was no longer here. It was May. I was sprawled out on my bed, tablet planted in front of my face, scrolling through pictures looking for prom hairstyle inspiration to no avail. My mom tells me to say a prayer for Mimi because she was about to go into surgery. I thought not much of it, not breaking my gaze from the vital task at hand: Up-do or cascading curls? The phone rang. I thought that must be for my mom, she's the only one who uses it anyways. With heavy steps, my dad wandered into my room, sat on my bed, his eyes red and puffy, gentle rivers ebbing down the contours of his subtle aging face. He gaze locked on mine. A simple shake of his head, from left to right, paired with clear streams tracing his pourous face, a jolt shook my core. The world came to a halt the same way a car does when it’s driver is well over the speed limit and slams the breaks as the traffic light turns from green to yellow to red in an instant with the rancid stench of burning rubber, wailing of brakes, screaming and tears. I was that car’s passenger and was not wearing a seat belt, unprepared. 
+		</p>
+		<p>
+			Today, that memory is still sharp and ragged, causing these wounds to heal haphazardly. With an unfocused gaze out the open backseat window, I half heartedly wanted to catch a glimpse of crimson wings. I blamed the bright sun and pollen for causing my mascara to smudge. Betrayed by nature, I shifted my gaze to the potted flowers nestled on my lap, pastel pink roses. The plan was to plant the roses at Mimi’s final resting place. I had never visited her here before. She was turned to ashes, and was going to be spread in a few of her favorite places, but a change of plans led to a grave in the town she grew up in. My father parked the car and now my allergies were obscenely acting up, so as to not bring more attention to myself, I step out of the car to grab the shovel. My mother is carrying the roses, and I, the shovel and a ceremic angel. I kept my head low as we approached the marker, and my father spoke, “Happy Mother’s Day Mom, I love you.” 
+		</p>
+		<p>
+			To hide the increasing pressure in my chest, I pick up the shovel to start digging and my dad tells me no. He instructs me to lift my head and look around. I do as I was told. I scan the lot, none of the sites have much more that bouquets of flowers resting on the markers. No plants were to take root in this section.  My gaze hovers over her bare marker Margaret E. Bumpus Oct 4, 1938 - May 21, 2013. That dash. I had only known her for the last eighteen years of her life and that was not long enough to hear all that she needed to say. I let the shovel slip from my grasp and walk away, succumbing to the tears drowning my face. To this day, I swear that in Mimi whispered in the wind of that barren, flower-less graveyard, “Love you bunches darlin’.”
+		</p>
+		<p>
+			You never know when your story in the encyclopedia of the world will end. With that in mind, make your story, your life, a good one. Make it so that the second time you die, the last time your name escapes lips and lingers in the air for that final moment, have your story be the way you want it to be. There are constant reminders of how temporary and finite our time on earth is, make it a good one. 
+		</p>
 	</div>
 </body>
 
